--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -35,37 +35,6 @@
             app:srcCompat="@drawable/ic_menu_illustration" />
     </androidx.cardview.widget.CardView>
 
-    <LinearLayout
-        android:id="@+id/lyt"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@id/cardImg"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/tvName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textColor="@color/text"
-            android:textSize="@dimen/heading_3" />
-
-        <TextView
-            android:id="@+id/tvStatus"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textColor="@color/red_apple" />
-
-        <TextView
-            android:id="@+id/tvDesc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-
-    </LinearLayout>
-
     <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
@@ -73,15 +42,55 @@
         android:layout_alignParentBottom="true"
         android:background="@color/grey" />
 
-    <TextView
-        android:id="@+id/tvPrice"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="10dp"
-        android:layout_toRightOf="@id/lyt"
-        android:text="TextView"
-        android:textColor="@color/text"
-        android:textSize="@dimen/heading_2" />
+        android:layout_toLeftOf="@id/ivMore"
+        android:layout_toRightOf="@id/cardImg"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:id="@+id/lyt"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textColor="@color/text"
+                android:textSize="@dimen/heading_3" />
+
+            <TextView
+                android:id="@+id/tvStatus"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textColor="@color/red_apple" />
+
+            <TextView
+                android:id="@+id/tvDesc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tvPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="0"
+            android:text="TextView"
+            android:textColor="@color/text"
+            android:textSize="@dimen/heading_2" />
+
+    </LinearLayout>
+
 </RelativeLayout>
