--- a/app/src/main/res/layout/item_slider.xml
+++ b/app/src/main/res/layout/item_slider.xml
@@ -3,29 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/lytParent"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/ivMore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/cardImg"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentTop="false"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="false"
+        android:background="@color/white"
         app:srcCompat="@drawable/ic_baseline_more" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardImg"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_below="@id/ivMore"
+        android:layout_centerVertical="false"
         app:cardCornerRadius="4dp"
-        app:cardElevation="0dp"
         app:cardMaxElevation="0dp">
 
         <ImageView
@@ -34,12 +30,5 @@
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_menu_illustration" />
     </androidx.cardview.widget.CardView>
-
-    <View
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_alignParentBottom="true"
-        android:background="@color/grey" />
 
 </RelativeLayout>
