--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -73,7 +73,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="EG Point" />
+            android:text="EG Point"
+            android:visibility="gone" />
 
         <RadioButton
             android:id="@+id/rbOther"
