--- a/app/src/main/res/layout/fragment_user_dashboard.xml
+++ b/app/src/main/res/layout/fragment_user_dashboard.xml
@@ -21,7 +21,8 @@
             android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="10dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/imageView"
