--- a/app/src/main/res/layout/dialog_buy.xml
+++ b/app/src/main/res/layout/dialog_buy.xml
@@ -65,7 +65,7 @@
                     android:text="Product Name"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:textColor="@color/text"
-                    android:textSize="@dimen/heading_1" />
+                    android:textSize="@dimen/heading_2" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -78,7 +78,7 @@
                         android:maxLines="1"
                         android:text="Rp. "
                         android:textColor="@color/black_errie"
-                        android:textSize="@dimen/heading_1"
+                        android:textSize="@dimen/body"
                         android:textStyle="bold" />
 
                     <TextView
@@ -88,7 +88,7 @@
                         android:maxLines="1"
                         android:text="50000"
                         android:textColor="@color/black_errie"
-                        android:textSize="@dimen/heading_1"
+                        android:textSize="@dimen/heading_2"
                         android:textStyle="bold" />
                 </LinearLayout>
 
