--- a/app/src/main/res/layout/fragment_resto_dasboard.xml
+++ b/app/src/main/res/layout/fragment_resto_dasboard.xml
@@ -112,12 +112,28 @@
             android:text="TextView"
             android:textSize="@dimen/heading_3" />
 
-        <Button
-            android:id="@+id/btnAllMenu"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/grey"
-            android:text="All Menu" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnAllMenu"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/grey"
+                android:text="All Menu" />
+
+            <Button
+                android:id="@+id/btnBarcode"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:text="Show Barcode" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
