--- a/app/src/main/res/layout/item_chat_me.xml
+++ b/app/src/main/res/layout/item_chat_me.xml
@@ -25,7 +25,8 @@
             android:padding="5dp"
             android:text="02:30 AM"
             android:textColor="@color/grey"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:visibility="gone" />
 
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
