--- a/app/src/main/res/layout/item_chat_you.xml
+++ b/app/src/main/res/layout/item_chat_you.xml
@@ -18,7 +18,8 @@
         android:padding="5dp"
         android:text="02:30 AM"
         android:textColor="@color/grey"
-        android:textSize="12sp" />
+        android:textSize="12sp"
+        android:visibility="gone" />
 
     <LinearLayout
         android:layout_width="match_parent"
